assets/style/style.css
/* ... */
.modalMain {
    background-color: #221239;
}

.modal-dialog {
    padding-top: 100px;
    width: 380px;
}

.modal-content {
    border-radius: 10px;
    border: 1px solid #42117e;
}

.modal-title {
    color: #d5adff  !important;
    font-size: 25px;
    margin-top: 22px;
}

.modalContents {
    margin-top: -14px;
}

.modalContents .topText {
    padding: 0px 39px;
    color: #AF9CC6;
    font-size: 16px;
    font-weight: 500;
    display: block;
}

.textGradientKeys {
    background: -webkit-linear-gradient(left, #9B21FB , #FC1DA0);
    background: -o-linear-gradient(right, #9B21FB, #FC1DA0);
    background: -moz-linear-gradient(right, #9B21FB, #FC1DA0);
    background: linear-gradient(to right, #9B21FB , #FC1DA0); 
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

    box-decoration-break: clone;
    -webkit-box-decoration-break: clone;
    font-weight: 600;
}

.rewardsBadge {
    background-color: #5811AB;
    border-radius: 8px;
    margin-left: 18px;
    padding: 4px 13px;
    position: relative;
    top: -2px;
}

.plus-icon,
.change-pwd-icon,
.del-wallet-icon {
    margin-right: 5px;
}



.plus-icon svg path,
.change-pwd-icon svg path,
.del-wallet-icon svg path {
    fill: #fff;
}

.gift-icon svg path {
    fill:#AF9CC6;
    margin-right: 4px;
}

.plus-icon svg {
    height: 15px;
}

.gift-icon svg {
    height: 15px;
    position: relative;
    top: -1px;
}

.change-pwd-icon svg,
.del-wallet-icon svg {
    height: 15px;
    position: relative;
    top: -2px;
}

.masternodeModalDialog {
    width: 800px;
}

textarea:focus-visible {
    outline:none;
}

textarea::placeholder {
    color:#A97DE8;
}

.masternodeModalDialog2 .modal-footer {
    width: 300px;
    padding-left: calc(50%);
}

.masternodeModalDialog2 .modal-footer button {
    margin-left:15px;
}

.masternodeModalDialog2 .modal-footer .pivx-button-outline {
    margin-right:15px;
}

@media (min-width: 576px) {
    .masternodeModalDialog {
        max-width: 800px;
    }
}

.transferBody {
    font: 14px 'Montserrat Regular';
    color: #AF9CC6;
    font-weight: 500;
}

.transferBody label,
.transferBody label {
    margin-left:5px;
    margin-bottom: 10px;
}

.tranferModal .input-group-text {
    background-color: #7f20ff;
    color: #E9DEFF;
    border: 2px solid #af9cc6;
    border-left: 0px;
}

.tranferModal .input-group-text:nth-child(2) {
    border: 2px solid #af9cc6;
}

.masternodeBadges {
    color: #000;
    font-weight: 600;
    padding: 5px 11px 5px 11px;
    border-radius: 6px;
}

.enabledBadge {
    background-color:#5FA800;
}

.preEnabledBadge {
    background-color:#A49DB2;
}

.missingBadge {
    background-color:#FF1D1D;
}

.masternodeTable tbody tr td {
    padding-top: 25px;
    padding-bottom: 25px;
}

.cameraIcon svg {
    height:22px;
    width:22px;
    fill:#e9deff;
}

.masternodeTable tbody tr td .wallet-code {
    width:fit-content!important;
    font-weight:600;
}

.masternodeTable tbody tr td .mnLastSeen {
    color:#76678D;
    font-weight:500;
}

.pColor svg {
    fill:#6410c7;
}
.wallet-code-new {
    background-color: #e9deff;
    color: #6410c7;
    border-radius: 7px;
    border: 1px solid #af9cc6;
    padding: 7px 10px;
    display:block;
}

.mnTopConfigured {
    display: flex;
    justify-content: center;
    margin-top: 33px;
    margin-bottom: 35px;
    color:#E9DEFF;
}

.modal {
    width: auto;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%!important;
}

.shadowInnerCard {
    -webkit-box-shadow: 5px 5px 14px -5px rgba(22, 22, 22, 1);
    -moz-box-shadow: 5px 5px 14px -5px rgba(22, 22, 22, 1);
    box-shadow: 5px 5px 14px -5px rgba(22, 22, 22, 1);
}

@media (max-width:992px) {
    .navBarActions {
        flex-direction: row;
        height: 45px;
        display: flex;
        align-items: center;
    }

    .navBarActions .nav-item .nav-link {
        display:flex;
        justify-content: center;
        width:40px;
    }
}

.goToWalletIco svg {
    height: 18px;
    position: relative;
    top: 2px;
}

.tooltip {
    z-index: 5000;
}

.gradientBackground {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transition: all 0.250s ease-in-out;
}

.navbar::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(90deg, #1A122D, #150927)!important;
    opacity: 0;
    z-index:-10;
    transition: opacity 0.125s ease-in-out;
}

.navbar.active::after {
    opacity: 1;
}

.navbar-toggler {
    border:0px;
}

.navbar-toggler:hover span {
    background-image: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 width=%2730%27 height=%2730%27 viewBox=%270 0 30 30%27%3e%3cpath stroke=%27rgba%28255, 255, 255, 0.7%29%27 stroke-linecap=%27round%27 stroke-miterlimit=%2710%27 stroke-width=%272%27 d=%27M4 7h22M4 15h22M4 23h22%27/%3e%3c/svg%3e')
}

.sendHeaderoText {
    color:#d5adff!important;
}

@media (max-width: 992px) {
    .govNoBtnMob span {
        width:62px;
        text-align: center;
    }

    .govYesBtnMob {
        width:68px;
        margin-left: 0px;
    }
}

.modal-body {
    overflow: auto;
}

